# ai-output-quality-lab

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/cases/: customer_support_refund.json  linkedin_b2b_saas.json
configs/keywords/: linkedin_keywords.txt
configs/prompt_suites/: linkedin_v1.json  support_v1.json
configs/rubrics/: judge_rubric_v1.json
runs/hero_linkedin_b2b_saas/: results.json  summary.md
src/qolab/: __init__.py  cli.py  pipeline.py
src/qolab/evaluation/: aggregation.py  heuristics.py  judge.py  rubric.py
src/qolab/generation/: client.py  dryrun.py  prompts.py
src/qolab/logging/: run_store.py  schemas.py
src/qolab/utils/: io.py  text.py
tests/: test_aggregation.py  test_heuristics.py
